style.css
@font-face {
    font-family: "AngelicWar";
    src: url("entities/AngelicWar.otf");
}

body {
    font-family: "AngelicWar", sans-serif;
    color: rgb(104, 9, 9);
    /*background-image: url(entities/cybercore.jpg);*/
    background: #ebe9da;
    background-image: linear-gradient(176deg, rgba(235, 233, 218, 1) 0%, rgba(47, 90, 143, 1) 100%);
    cursor: url(entities/Cosmica/default.cur), default;
}

h1 {
    text-align: center;
    font-size: 90px;
}

.guestbook {
    border: 2px solid #000000;
    width: 50%;
    height: 691px;
    margin-left: auto;
    margin-right: auto;
    border-radius: 15px;
    background-image: url(entities/guestbookbackgrnd.jpg);
    background-size: contain;
    background-repeat: repeat;
    background-color: #00ff9c;

}

.guestbook img {
    height: 50px;
    width: 100px;
    margin-top: -10px;
    object-fit: contain;

}

.guestbook span {
    font-size: 25px;
    background-color: rgba(255, 255, 255, 0.027);
    backdrop-filter: blur(1rem);
    border: 2px solid #9e9a9a;
    border-radius: 15px;
    display: flex;
    padding: 5px;
    margin-bottom: -10px;
    text-shadow: 0 5px 6px #000000;
    overflow: hidden;
    text-shadow: 0 5px 6px #ffffff;
    justify-content: center;
}

.guestbook form {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    gap: 7px;
    align-items: center;
    border-radius: 3px;
    padding: 5px;
    font-size: 25px;
    text-shadow: 0 5px 6px #ffffff;
}

.guestbook label {
    cursor: url(entities/Cosmica/default.cur), default;
}

.guestbook input {
    border-radius: 40px;
    padding: 3px;
    box-shadow: 0 0 6px #00ff9c;
    cursor: url(entities/Cosmica/personselect.cur), text;
}

.guestbook textarea {
    text-decoration: none;
    width: 400px;
    height: 100px;
    resize: none;
    border-radius: 40px;
    padding: 15px;
    box-shadow: 0 0 6px #00ff9c;
    border: 1px solid black;
    cursor: url(entities/Cosmica/personselect.cur), text;

}

.guestbook button {
    background-image: radial-gradient(circle at center, #00ff9c33 0%, #001a12 60%, #000000 80%);
    color: rgb(255, 255, 255);
}

.guestbook button:hover {
    box-shadow: 0 0 6px #00ff9c;
    cursor: url(entities/Cosmica/precisionselect.cur), pointer;
}

#message-section {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    background-color: #4c4e4d;
    display: flex;
    text-align: center;
    font-size: 17px;
    flex-direction: column;
    max-width: 700px;
    margin: 0 auto;
    overflow-y: auto;
    border-radius: 7px;
    color: white;
    box-shadow: 0 0 6px #00ff9c;
    border: 1px solid black;
    max-height: 330px;

}

#message-section::-webkit-scrollbar {
    cursor: url(entities/Cosmica/default.cur), default;
    width: 0;
}

.winamp {
    position: absolute;
    right: 1rem;
    top: 1rem;
    width: 300px;
    border-radius: 2rem;
    background: #811212;
    background-image: url(entities/cybercoreimage2.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border: 2px solid #444;
    box-shadow: 0 0 10px #424242;
    overflow: hidden;
    padding: 15px;
}

.title-bar {
    max-height: 30px;
    background-color: rgba(255, 255, 255, 0.027);
    backdrop-filter: blur(.5rem);
    border: 2px solid #1f1e1e;
    border-radius: 2rem;
    color: #b43232;
    text-shadow: 0 5px 6px #000000;
    box-shadow: 0 0 15px #424242;
    /*margin-left: 20px;
    margin-right: 15px;*/
    font-size: 23px;
    padding: 6px;
    display: flex;
    justify-content: space-between;
    cursor: url(entities/Cosmica/move.cur), move;
}


.title-bar img {
    height: 70px;
    width: 100px;
    margin-top: -20px;
}

.display {
    background: #000;
    color: #00ff9c;
    text-align: center;
    font-size: 25px;
    text-shadow: 0 0 8px #00ff9c;
    margin: 1em;
    border-radius: 5px;
}

.display p {
    margin-top: -10px;
    background-color: #000000;
    border-radius: 50px;
}

#track-visual {
    width: 100%;
    height: 180px;
    object-fit: cover;

}

.playlist {
    background: #111;
    color: #00ff9c;
    margin: 10px 0;
    padding: 8px;
    border-radius: 10px;
    max-height: 120px;
    overflow-y: auto;
    font-size: 14px;
    max-height: 3rem;
    overflow-x: hidden;
}

.controls label {
    cursor: url(entities/Cosmica/precisionselect.cur), pointer;
}

.playlist::-webkit-scrollbar {
    width: 0px;
    background: transparent;
}

#track-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

#track-list li {
    cursor: pointer;
    padding: 4px;
}

#track-list li:hover {
    background: #222;
    cursor: url(entities/Cosmica/precisionselect.cur), pointer;
}

#track-list li.current {
    background: #00ff9c33;
    font-weight: bold;
}

.controls button {
    width: 30px;
    height: 30px;
    border: 2px solid #000000;
    cursor: pointer;
    border-radius: 50px;

}

.controls button:hover {
    box-shadow: 0 0 6px #00ff9c;
    cursor: url(entities/Cosmica/precisionselect.cur), pointer;
}

.prev {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-image: radial-gradient(circle at center, #00ff9c33 0%, #001a12 60%, #000000 80%);

}

.play {
    background-image: radial-gradient(circle at center, #ff000033 0%, #1a0000 60%, #000000 80%);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

}

.pause {
    background-image: radial-gradient(circle at center, #ffbb0033 0%, #1a1400 60%, #000000 80%);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

}

.next {
    background-image: radial-gradient(circle at center, #c300ff33 0%, #14001a 60%, #000000 80%);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

}


.equalizer {
    display: flex;
    gap: 3px;
    padding: 5px;
    justify-content: center;
    height: 20px;
    background-color: #000000;
    background: linear-gradient(-160deg, #bd120c33 0%, #4b0606 55%, #0c0b0b 80%);
    /*margin-left: 100px;
    margin-right: 100px;
    margin-bottom: 1rem;*/
    width: 80px;
    margin: 0 auto 1rem auto;
    border: 2px solid #313131;
    border-radius: 50px;
}

.equalizer span {
    width: 5px;
    height: 15px;
    box-shadow: 0 0 6px #00ff9d;
    background: #00ff9d;
    transform-origin: bottom;
    animation: eq 0.6s infinite alternate;
}

.equalizer span:nth-child(2) {
    animation-delay: 0.1s;
}

.equalizer span:nth-child(3) {
    animation-delay: 0.2s;
}

.equalizer span:nth-child(4) {
    animation-delay: 0.3s;
}

.equalizer span:nth-child(5) {
    animation-delay: 0.15s;
}

@keyframes eq {
    from {
        transform: scaleY(0.3);
    }

    to {
        transform: scaleY(1);
    }
}

@media screen and (max-width: 600px) {
    .winamp {
        width: 300px;
        top: 300px;
        left: 0;
        right: 0;
        z-index: 1000;
        margin: 0 auto;

    }

    .guestbook {
        width: 300px;
        margin-top: 160%;
        text-align: center;
    }

    .guestbook textarea {
        width: 80%;
    }

    #message-section {
        width: 85%;
        height: 43%;
        font-size: 85%;
    }
}

